<resources>
    <string name="app_name">S-Mentor</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_chat">RecentChat</string>
    <string name="title_list">List</string>
    <string name="title_mentoring">Mentoring</string>
    <string name="title_board">Board</string>
    <string name="title_write">게시글 작성</string>
    <string name="major">전공</string>
    <string name="field">분야</string>
    <string name="search">검색</string>
    <string name="todo">TODO</string>
    <string name="name_recentChat">채팅</string>
    <string name="name_apply">멘토링 신청</string>
    <string name="name_mentoring">멘토 목록</string>
    <string name="name_board">질문 게시판</string>
    <string name="signUp">회원가입</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="name">이름</string>
    <string name="email">이메일 주소</string>
    <string name="skkuEmail">(인증메일을 보내니 성균관대 메일 아이디로 하세요)</string>
    <string name="skku">\@skku.edu</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="phone">핸드폰 번호</string>
    <string name="warning">성균관대 학생임을 인증함으로 반드시 성균관대 학교 이메일로 가입해주세요!</string>
    <string name="name_profile">프로필</string>
    <string name="mentor">멘토</string>
    <string name="introduction">자기소개</string>
    <string name="correction">정보 수정</string>
    <string name="changePs">비밀번호 변경</string>
    <string name="S_Mentor">S-멘토</string>
    <string name="autoLogin">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="name_inform">추가 정보 등록</string>
    <string name="mentor_mentee">멘토 / 멘티</string>
    <string name="introduction_inform">자신에 대해 소개해주세요.</string>
    <string name="photo_inform">사용하실 프로필 사진을 등록해주세요.</string>
    <string name="send">send</string>
    <string name="text">text</string>
    <string name="my_mentoring">나의 멘토링</string>
    <string name="board_hint">내용을 입력하세요.</string>
    <string name="title_hint">제목을 입력하세요.</string>
    <string name="before_ps">이전 비밀번호</string>
    <string name="new_ps">새로운 비밀번호</string>
</resources>