<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.s_mentor.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.s_mentor.ui.recentChat.RecentChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_recentchat" />

    <fragment
        android:id="@+id/navigation_board"
        android:name="com.example.s_mentor.ui.board.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_board" />

    <fragment
        android:id="@+id/navigation_mentoring"
        android:name="com.example.s_mentor.ui.mentoring.MentoringFragment"
        android:label="@string/title_mentoring"
        tools:layout="@layout/fragment_mentoring" />


</navigation>