<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_inform"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="40dp"
        android:id="@+id/tvTitle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/inform_photo"
            android:background="@drawable/ic_baseline_person_outline_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_inform"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />

    </FrameLayout>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/inform_major"
        app:layout_constraintTop_toBottomOf="@+id/imageLayout"
        android:layout_marginTop="15dp"
        android:hint="@string/major"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/inform_major"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/imageLayout"
        android:id="@+id/inform_introduction"
        android:hint="@string/introduction_inform"
        android:textSize="14sp"
        android:textAlignment="center"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inform_introduction"
        android:id="@+id/inform_choice">

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:id="@+id/inform_list"
            android:numColumns="3"/>

    </LinearLayout>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inform_choice"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btType"
        android:text="@string/mentor_mentee"
        android:textSize="14sp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btType"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btSignUp"
        android:text="@string/signUp"
        android:textSize="14sp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progressbar"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>