<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:text="@string/name"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:text="@string/email"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintEnd_toStartOf="@+id/skku"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/skku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="7dp"
        android:text="@string/skku"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>