<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mentoring.MentoringFragment">

    <TextView
        android:id="@+id/mentoring_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/my_mentoring"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btLogOut"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/settings_icon_128522"
        app:icon="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/mentoring_photo"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_title"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#eeeeee"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/mentoring_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_photo"
        />

    <TextView
        android:id="@+id/mentoring_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_date"
        />

    <TextView
        android:id="@+id/mentoring_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mentoring_name"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_date"
        />


    <TextView
        android:id="@+id/mentoring_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/major"
        android:textColor="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_name"/>

    <TextView
        android:id="@+id/mentoring_userMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mentoring_major"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_name"
        />

    <TextView
        android:id="@+id/mentoring_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/phone"
        android:textColor="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_major"/>

    <TextView
        android:id="@+id/mentoring_userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/mentoring_phone"
        app:layout_constraintTop_toBottomOf="@+id/mentoring_major"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/mentoring_phone"
        android:id="@+id/mentoring_choice">

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mentoring_list"
            android:numColumns="4"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>