<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E4E4"
    tools:context=".board.BoardAddActivity">

    <TextView
        android:id="@+id/title_Write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_write"
        android:textSize="30sp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        />

    <Button
        android:id="@+id/add_photo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_board"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_baseline_insert_photo_24"
        />

    <Button
        android:id="@+id/add_board"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_baseline_arrow_upward_24"
        />

    <EditText
        android:id="@+id/write_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/title_Write"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/write_board"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/write_title"
        android:hint="@string/board_hint"
        android:inputType="text"
        android:gravity="top"/>

    <ImageView
        android:id="@+id/photo_board"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/write_board"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/photo_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/write_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_board"
        android:layout_marginStart="5dp"
        android:background="@drawable/ic_baseline_clear_24"
        />




</androidx.constraintlayout.widget.ConstraintLayout>